import java.util.ArrayList;
import java.util.Comparator;

/**
 * Algoritmo Merge Sort adaptado para operar sobre ArrayList de Pokemon[cite: 1].
 */
public class Merge {

    private Merge() { }

    /**
     * Reorganiza la lista en orden ascendente usando el comparador proporcionado[cite: 1].
     * @param a La lista de Pokémon a ordenar.
     * @param comparator El comparador que define el criterio.
     */
    public static void sort(ArrayList<Pokemon> a, Comparator<Pokemon> comparator) {
    }
}
