@startuml

class Pokemon {
  - id : int
  - name : String
  - type1 : String
  - hp : int
  - attack : int
  - defense : int
  - speed : int
  - totalStats : int
  + Pokemon(...)
  + getName() : String
  + getTotalStats() : int
}

class PokemonDatabase {
  - pokemons : ArrayList
  + ordenarPorAlgoritmo(algoritmo, atributo)
  + sequentialSearch(clave, atributo)
  + binarySearch(clave, atributo)
}

class PokemonGenerator {
  + generateDatabase(n, seed)
}

class Selection {
  + sort(lista, comparador)
}

class Merge {
  + sort(lista, comparador)
}

PokemonDatabase "1" *-- "*" Pokemon
PokemonDatabase ..> Selection
PokemonDatabase ..> Merge
PokemonGenerator ..> Pokemon

note right of PokemonDatabase
  Contrato binarySearch:
  * Requiere que la lista esté ordenada.
  * Retorna todas las coincidencias contiguas.
end note

note right of PokemonGenerator
  Contrato PokemonGenerator:
  * Genera n Pokémon con datos aleatorios.
  * Ningún nombre se repite más de 't' veces.
end note

@enduml
